--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-g" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Animation Sequence Enhancer</title>
     <script src="https://cdn.tailwindcss.com"></script>
-  <script type="importmap">
+  </head>
+  <body class="bg-gray-900 text-white">
+    <div id="root"></div>
+
+    <script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
@@ -16,9 +20,7 @@
   }
 }
 </script>
-</head>
-  <body class="bg-gray-900 text-white">
-    <div id="root"></div>
+
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
